soc.robot efficiency: Since SOCRobotBrain is single-threaded, refactor Vector -> ArrayList: SOCPlayerTracker, SOCPossiblePiece types, SOCRobotDM, etc; enumerations -> foreach loops; new Integer -> .valueOf; rbrain.buildingPlan +final; set ppiece.threats, .biggestThreats in parent class not each subtype; ppiece types + misc javadocs