@@ -43,13 +43,14 @@ import soc.game.SOCShip;
 import soc.util.Pair;
 import soc.util.Queue;
 
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Stack;
 import java.util.TreeMap;
-import java.util.Vector;
 
 
 /**
@@ -301,7 +302,7 @@ public class SOCPlayerTracker
                     // now find the copy of this necessary road and
                     // add it to the pos road copy's nec road list
                     //
-                    SOCPossibleRoad necRoadCopy = possibleRoadsCopy.get(new Integer(necRoad.getCoordinates()));
+                    SOCPossibleRoad necRoadCopy = possibleRoadsCopy.get(Integer.valueOf(necRoad.getCoordinates()));
 
                     if (necRoadCopy != null)
                     {
@@ -325,7 +326,7 @@ public class SOCPlayerTracker
                     case SOCPossiblePiece.SHIP:  // fall through to ROAD
                     case SOCPossiblePiece.ROAD:
 
-                        SOCPossibleRoad newPosRoadCopy = possibleRoadsCopy.get(new Integer(newPos.getCoordinates()));
+                        SOCPossibleRoad newPosRoadCopy = possibleRoadsCopy.get(Integer.valueOf(newPos.getCoordinates()));
 
                         if (newPosRoadCopy != null)
                         {
@@ -340,7 +341,8 @@ public class SOCPlayerTracker
 
                     case SOCPossiblePiece.SETTLEMENT:
 
-                        SOCPossibleSettlement newPosSettlementCopy = possibleSettlementsCopy.get(new Integer(newPos.getCoordinates()));
+                        SOCPossibleSettlement newPosSettlementCopy = possibleSettlementsCopy.get
+                            (Integer.valueOf(newPos.getCoordinates()));
 
                         if (newPosSettlementCopy != null)
                         {
@@ -371,7 +373,7 @@ public class SOCPlayerTracker
                     // now find the copy of this necessary road and
                     // add it to the pos settlement copy's nec road list
                     //
-                    SOCPossibleRoad necRoadCopy = possibleRoadsCopy.get(new Integer(necRoad.getCoordinates()));
+                    SOCPossibleRoad necRoadCopy = possibleRoadsCopy.get(Integer.valueOf(necRoad.getCoordinates()));
 
                     if (necRoadCopy != null)
                     {
@@ -391,7 +393,8 @@ public class SOCPlayerTracker
                     // now find the copy of this conflict and
                     // add it to the conflict list in the pos settlement copy
                     //
-                    SOCPlayerTracker trackerCopy2 = trackersCopy.get(new Integer(conflict.getPlayer().getPlayerNumber()));
+                    SOCPlayerTracker trackerCopy2 = trackersCopy.get
+                        (Integer.valueOf(conflict.getPlayer().getPlayerNumber()));
 
                     if (trackerCopy2 == null)
                     {
@@ -399,7 +402,8 @@ public class SOCPlayerTracker
                     }
                     else
                     {
-                        SOCPossibleSettlement conflictCopy = trackerCopy2.getPossibleSettlements().get(new Integer(conflict.getCoordinates()));
+                        SOCPossibleSettlement conflictCopy = trackerCopy2.getPossibleSettlements().get
+                            (Integer.valueOf(conflict.getCoordinates()));
 
                         if (conflictCopy == null)
                         {
@@ -679,7 +683,7 @@ public class SOCPlayerTracker
                     //
                     //D.ebugPrintln("$$$ found it");
                     removeFromNecessaryRoads(posSet);
-                    posSet.getNecessaryRoads().removeAllElements();
+                    posSet.getNecessaryRoads().clear();
                     posSet.setNumberOfNecessaryRoads(0);
                 }
                 else
@@ -700,14 +704,13 @@ public class SOCPlayerTracker
         //
         // see if this road adds any new possible roads
         //
-        Vector<SOCPossibleRoad> newPossibleRoads = new Vector<SOCPossibleRoad>();
-        Vector<SOCPossibleRoad> roadsToExpand = new Vector<SOCPossibleRoad>();
+        ArrayList<SOCPossibleRoad> newPossibleRoads = new ArrayList<SOCPossibleRoad>();
+        ArrayList<SOCPossibleRoad> roadsToExpand = new ArrayList<SOCPossibleRoad>();
 
         //
         // check adjacent edges to road
         //
-        Vector<Integer> adjEdgesEnum = board.getAdjacentEdgesToEdge(road.getCoordinates());
-        for (Integer adjEdge : adjEdgesEnum)
+        for (Integer adjEdge : board.getAdjacentEdgesToEdge(road.getCoordinates()))
         {
             final int edge = adjEdge.intValue();
 
@@ -764,15 +767,15 @@ public class SOCPlayerTracker
                     // if so, clear necessary road list and remove from np lists
                     //
                     //D.ebugPrintln("$$$ pr "+Integer.toHexString(pr.getCoordinates())+" already in list");
-                    if (!pr.getNecessaryRoads().isEmpty())
+                    if (! pr.getNecessaryRoads().isEmpty())
                     {
                         //D.ebugPrintln("$$$    clearing nr list");
                         removeFromNecessaryRoads(pr);
-                        pr.getNecessaryRoads().removeAllElements();
+                        pr.getNecessaryRoads().clear();
                         pr.setNumberOfNecessaryRoads(0);
                     }
 
-                    roadsToExpand.addElement(pr);
+                    roadsToExpand.add(pr);
                     pr.setExpandedFlag();
                 }
                 else
@@ -806,8 +809,8 @@ public class SOCPlayerTracker
                             ("L793: " + toString() + ": new PossibleShip(" + isCoastal + ") at 0x" + Integer.toHexString(edge));
                     }
                     newPR.setNumberOfNecessaryRoads(roadsBetween);  // 0 unless requires settlement
-                    newPossibleRoads.addElement(newPR);
-                    roadsToExpand.addElement(newPR);
+                    newPossibleRoads.add(newPR);
+                    roadsToExpand.add(newPR);
                     newPR.setExpandedFlag();
                 }
             }
@@ -891,8 +894,7 @@ public class SOCPlayerTracker
         //
         //D.ebugPrintln("$$$ checking for possible settlements");
         //
-        Vector<Integer> adjNodeEnum = board.getAdjacentNodesToEdge(tgtRoadEdge);
-        for (Integer adjNode : adjNodeEnum)
+        for (Integer adjNode : board.getAdjacentNodesToEdge(tgtRoadEdge))
         {
             if (dummy.canPlaceSettlement(adjNode.intValue()))
             {
@@ -907,13 +909,13 @@ public class SOCPlayerTracker
                     //
                     // if so and it needs 1 or more roads other than this one,
                     //
-                    if ((!posSet.getNecessaryRoads().isEmpty()) && (!posSet.getNecessaryRoads().contains(targetRoad)))
+                    if (! (posSet.getNecessaryRoads().isEmpty() || posSet.getNecessaryRoads().contains(targetRoad)))
                     {
                         //
                         // add target road to settlement's nr list and this settlement to the road's np list
                         //
                         //D.ebugPrintln("$$$ adding road "+Integer.toHexString(targetRoad.getCoordinates())+" to the settlement "+Integer.toHexString(posSet.getCoordinates()));
-                        posSet.getNecessaryRoads().addElement(targetRoad);
+                        posSet.addNecessaryRoad(targetRoad);
                         targetRoad.addNewPossibility(posSet);
 
                         //
@@ -931,8 +933,8 @@ public class SOCPlayerTracker
                     // else, add new possible settlement
                     //
                     //D.ebugPrintln("$$$ adding new possible settlement at "+Integer.toHexString(adjNode.intValue()));
-                    Vector<SOCPossibleRoad> nr = new Vector<SOCPossibleRoad>();
-                    nr.addElement(targetRoad);
+                    List<SOCPossibleRoad> nr = new ArrayList<SOCPossibleRoad>();
+                    nr.add(targetRoad);
 
                     SOCPossibleSettlement newPosSet = new SOCPossibleSettlement(player, adjNode.intValue(), nr);
                     newPosSet.setNumberOfNecessaryRoads(targetRoad.getNumberOfNecessaryRoads() + 1);
@@ -949,8 +951,8 @@ public class SOCPlayerTracker
             // check for new possible roads or ships.
             // The above getNumPieces check ignores any possible ship <-> road transition at a coastal settlement.
             //
-            Vector<SOCPossibleRoad> newPossibleRoads = new Vector<SOCPossibleRoad>();
-            Vector<SOCPossibleRoad> roadsToExpand = new Vector<SOCPossibleRoad>();
+            ArrayList<SOCPossibleRoad> newPossibleRoads = new ArrayList<SOCPossibleRoad>();
+            ArrayList<SOCPossibleRoad> roadsToExpand = new ArrayList<SOCPossibleRoad>();
 
             // ships in _SC_PIRI never expand east
             final boolean isShipInSC_PIRI = (! isRoadNotShip) && game.isGameOptionSet(SOCGameOption.K_SC_PIRI);
@@ -1037,15 +1039,15 @@ public class SOCPlayerTracker
                         // if so, and it needs 1 or more roads other than this one,
                         //
                         //D.ebugPrintln("$$$ pr "+Integer.toHexString(pr.getCoordinates())+" already in list");
-                        Vector<SOCPossibleRoad> nr = pr.getNecessaryRoads();
+                        List<SOCPossibleRoad> nr = pr.getNecessaryRoads();
 
-                        if (!nr.isEmpty() && (!nr.contains(targetRoad)))
+                        if (! (nr.isEmpty() || nr.contains(targetRoad)))
                         {
                             //
                             // add the target road to its nr list and the new road to the target road's np list
                             //
                             //D.ebugPrintln("$$$    adding "+Integer.toHexString(targetRoad.getCoordinates())+" to nr list");
-                            nr.addElement(targetRoad);
+                            nr.add(targetRoad);
                             targetRoad.addNewPossibility(pr);
 
                             //
@@ -1057,9 +1059,9 @@ public class SOCPlayerTracker
                             }
                         }
 
-                        if (!pr.hasBeenExpanded())
+                        if (! pr.hasBeenExpanded())
                         {
-                            roadsToExpand.addElement(pr);
+                            roadsToExpand.add(pr);
                             pr.setExpandedFlag();
                         }
                     }
@@ -1069,8 +1071,8 @@ public class SOCPlayerTracker
                         // else, add new possible road or ship
                         //
                         //D.ebugPrintln("$$$ adding new pr at "+Integer.toHexString(adjEdge.intValue()));
-                        Vector<SOCPossibleRoad> neededRoads = new Vector<SOCPossibleRoad>();
-                        neededRoads.addElement(targetRoad);
+                        ArrayList<SOCPossibleRoad> neededRoads = new ArrayList<SOCPossibleRoad>();
+                        neededRoads.add(targetRoad);
 
                         SOCPossibleRoad newPR;
                         boolean isRoad = isRoadNotShip;
@@ -1096,8 +1098,8 @@ public class SOCPlayerTracker
                         }
                         newPR.setNumberOfNecessaryRoads(targetRoad.getNumberOfNecessaryRoads() + incrDistance);
                         targetRoad.addNewPossibility(newPR);
-                        newPossibleRoads.addElement(newPR);
-                        roadsToExpand.addElement(newPR);
+                        newPossibleRoads.add(newPR);
+                        roadsToExpand.add(newPR);
                         newPR.setExpandedFlag();
                     }
                 }
@@ -1106,21 +1108,16 @@ public class SOCPlayerTracker
             //
             // add the new roads to our list of possible roads
             //
-            Enumeration<SOCPossibleRoad> newPREnum = newPossibleRoads.elements();
-
-            while (newPREnum.hasMoreElements())
+            for (SOCPossibleRoad newPR : newPossibleRoads)
             {
-                SOCPossibleRoad newPR = newPREnum.nextElement();
                 possibleRoads.put(new Integer(newPR.getCoordinates()), newPR);
             }
 
             //
             // expand roads that we've touched or added
             //
-            Enumeration<SOCPossibleRoad> expandPREnum = roadsToExpand.elements();
-            while (expandPREnum.hasMoreElements())
+            for (SOCPossibleRoad expandPR : roadsToExpand)
             {
-                SOCPossibleRoad expandPR = expandPREnum.nextElement();
                 expandRoadOrShip(expandPR, player, dummy, trackers, level - 1);
             }
         }
@@ -1307,7 +1304,7 @@ public class SOCPlayerTracker
         final SOCShip closest = scen_SC_PIRI_closestShipToFortress;
         if (closest == null)
             return null;  // <--- Early return: no ships ---
-        final Vector<Integer> closestAdjacs =
+        final List<Integer> closestAdjacs =
             ((SOCBoardLarge) game.getBoard()).getAdjacentEdgesToEdge(closest.getCoordinates());
 
         SOCPossibleShip nextShip = null;
@@ -1490,7 +1487,7 @@ public class SOCPlayerTracker
             /**
              * copy a list of all the conflicting settlements
              */
-            Vector<SOCPossibleSettlement> conflicts = new Vector<SOCPossibleSettlement>(ps.getConflicts());
+            List<SOCPossibleSettlement> conflicts = new ArrayList<SOCPossibleSettlement>(ps.getConflicts());
 
             /**
              * remove the possible settlement that is now a real settlement
@@ -1502,11 +1499,8 @@ public class SOCPlayerTracker
             /**
              * remove possible settlements that this one cancels out
              */
-            Enumeration<SOCPossibleSettlement> conflictEnum = conflicts.elements();
-
-            while (conflictEnum.hasMoreElements())
+            for (SOCPossibleSettlement conflict : conflicts)
             {
-                SOCPossibleSettlement conflict = conflictEnum.nextElement();
                 D.ebugPrintln("$$$ checking conflict with " + conflict.getPlayer().getPlayerNumber() + ":" + Integer.toHexString(conflict.getCoordinates()));
 
                 SOCPlayerTracker tracker = trackers.get(new Integer(conflict.getPlayer().getPlayerNumber()));
@@ -1520,11 +1514,8 @@ public class SOCPlayerTracker
                     /**
                      * remove the conflicts that this settlement made
                      */
-                    Enumeration<SOCPossibleSettlement> otherConflictEnum = conflict.getConflicts().elements();
-
-                    while (otherConflictEnum.hasMoreElements())
+                    for (SOCPossibleSettlement otherConflict : conflict.getConflicts())
                     {
-                        SOCPossibleSettlement otherConflict = otherConflictEnum.nextElement();
                         D.ebugPrintln("$$$ removing conflict " + Integer.toHexString(conflict.getCoordinates()) + " from " + Integer.toHexString(otherConflict.getCoordinates()));
                         otherConflict.removeConflict(conflict);
                     }
@@ -1539,8 +1530,8 @@ public class SOCPlayerTracker
              */
             D.ebugPrintln("$$$ wasn't possible settlement");
 
-            Vector<SOCPossibleSettlement> trash = new Vector<SOCPossibleSettlement>();
-            Vector<Integer> adjNodes = board.getAdjacentNodesToNode(settlement.getCoordinates());
+            ArrayList<SOCPossibleSettlement> trash = new ArrayList<SOCPossibleSettlement>();
+            List<Integer> adjNodes = board.getAdjacentNodesToNode(settlement.getCoordinates());
             Iterator<SOCPlayerTracker> trackersIter = trackers.values().iterator();
 
             while (trackersIter.hasNext())
@@ -1557,16 +1548,13 @@ public class SOCPlayerTracker
                 if (posSet != null)
                 {
                     D.ebugPrintln("$$$ trashing " + Integer.toHexString(posSet.getCoordinates()));
-                    trash.addElement(posSet);
+                    trash.add(posSet);
 
                     /**
                      * remove the conflicts that this settlement made
                      */
-                    Enumeration<SOCPossibleSettlement> conflictEnum = posSet.getConflicts().elements();
-
-                    while (conflictEnum.hasMoreElements())
+                    for (SOCPossibleSettlement conflict : posSet.getConflicts())
                     {
-                        SOCPossibleSettlement conflict = conflictEnum.nextElement();
                         D.ebugPrintln("$$$ removing conflict " + Integer.toHexString(posSet.getCoordinates()) + " from " + Integer.toHexString(conflict.getCoordinates()));
                         conflict.removeConflict(posSet);
                     }
@@ -1575,27 +1563,21 @@ public class SOCPlayerTracker
                 /**
                  * check adjacent nodes
                  */
-                Enumeration<Integer> adjNodeEnum = adjNodes.elements();
-
-                while (adjNodeEnum.hasMoreElements())
+                for (Integer adjNode : adjNodes)
                 {
-                    Integer adjNode = adjNodeEnum.nextElement();
                     D.ebugPrintln("$$$ checking node " + Integer.toHexString(adjNode.intValue()));
                     posSet = tracker.getPossibleSettlements().get(adjNode);
 
                     if (posSet != null)
                     {
                         D.ebugPrintln("$$$ trashing " + Integer.toHexString(posSet.getCoordinates()));
-                        trash.addElement(posSet);
+                        trash.add(posSet);
 
                         /**
                          * remove the conflicts that this settlement made
                          */
-                        Enumeration<SOCPossibleSettlement> conflictEnum = posSet.getConflicts().elements();
-
-                        while (conflictEnum.hasMoreElements())
+                        for (SOCPossibleSettlement conflict : posSet.getConflicts())
                         {
-                            SOCPossibleSettlement conflict = conflictEnum.nextElement();
                             D.ebugPrintln("$$$ removing conflict " + Integer.toHexString(posSet.getCoordinates()) + " from " + Integer.toHexString(conflict.getCoordinates()));
                             conflict.removeConflict(posSet);
                         }
@@ -1608,17 +1590,14 @@ public class SOCPlayerTracker
                  */
                 D.ebugPrintln("$$$ removing trash for " + tracker.getPlayer().getPlayerNumber());
 
-                Enumeration<SOCPossibleSettlement> trashEnum = trash.elements();
-
-                while (trashEnum.hasMoreElements())
+                for (SOCPossibleSettlement pset : trash)
                 {
-                    SOCPossibleSettlement pset = trashEnum.nextElement();
                     D.ebugPrintln("$$$ removing " + Integer.toHexString(pset.getCoordinates()) + " owned by " + pset.getPlayer().getPlayerNumber());
                     tracker.getPossibleSettlements().remove(new Integer(pset.getCoordinates()));
                     removeFromNecessaryRoads(pset);
                 }
 
-                trash.removeAllElements();
+                trash.clear();
             }
         }
 
@@ -1630,7 +1609,7 @@ public class SOCPlayerTracker
          */
         if (board instanceof SOCBoardLarge)
         {
-            Vector<SOCPossibleRoad> roadsToExpand = null;
+            ArrayList<SOCPossibleRoad> roadsToExpand = null;
 
             /**
              * Only add new possible roads if we're on a new island
@@ -1638,9 +1617,9 @@ public class SOCPlayerTracker
              * Coastal ships/roads may still be added even if settleAlreadyHasRoad.
              */
             boolean settleAlreadyHasRoad = false;
-            Vector<SOCPossibleRoad> possibleNewIslandRoads = null;
+            ArrayList<SOCPossibleRoad> possibleNewIslandRoads = null;
 
-            final Vector<Integer> adjacEdges = board.getAdjacentEdgesToNode(settlementCoords);
+            final List<Integer> adjacEdges = board.getAdjacentEdgesToNode(settlementCoords);
 
             // First, loop to check for settleAlreadyHasRoad
             for (Integer edge : adjacEdges)
@@ -1690,7 +1669,7 @@ public class SOCPlayerTracker
                         continue;
 
                     if (possibleNewIslandRoads == null)
-                        possibleNewIslandRoads = new Vector<SOCPossibleRoad>();
+                        possibleNewIslandRoads = new ArrayList<SOCPossibleRoad>();
                     possibleNewIslandRoads.add( (isCoastline)
                         ? new SOCPossibleShip(player, edge, true, null)
                         : new SOCPossibleRoad(player, edge, null));
@@ -1706,8 +1685,8 @@ public class SOCPlayerTracker
                     System.err.println("L1685: " + toString() + ": new PossibleShip(false) at 0x" + Integer.toHexString(edge)
                         + " from coastal settle 0x" + Integer.toHexString(settlementCoords));
                     if (roadsToExpand == null)
-                        roadsToExpand = new Vector<SOCPossibleRoad>();
-                    roadsToExpand.addElement(newPS);
+                        roadsToExpand = new ArrayList<SOCPossibleRoad>();
+                    roadsToExpand.add(newPS);
                     newPS.setExpandedFlag();
                 }
             }
@@ -1725,8 +1704,8 @@ public class SOCPlayerTracker
                         + Integer.toHexString(pr.getCoordinates()) + " from coastal settle 0x"
                         + Integer.toHexString(settlementCoords));
                     if (roadsToExpand == null)
-                        roadsToExpand = new Vector<SOCPossibleRoad>();
-                    roadsToExpand.addElement(pr);
+                        roadsToExpand = new ArrayList<SOCPossibleRoad>();
+                    roadsToExpand.add(pr);
                     pr.setExpandedFlag();
                 }
             }
@@ -1773,16 +1752,14 @@ public class SOCPlayerTracker
         //D.ebugPrintln();
         D.ebugPrintln("$$$ addTheirNewSettlement : " + settlement);
 
-        Vector<SOCPossibleRoad> prTrash = new Vector<SOCPossibleRoad>();
-        Vector<SOCPossibleRoad> nrTrash = new Vector<SOCPossibleRoad>();
-        Vector<Integer> adjEdges = game.getBoard().getAdjacentEdgesToNode(settlement.getCoordinates());
-        Enumeration<Integer> edge1Enum = adjEdges.elements();
+        ArrayList<SOCPossibleRoad> prTrash = new ArrayList<SOCPossibleRoad>();
+        ArrayList<SOCPossibleRoad> nrTrash = new ArrayList<SOCPossibleRoad>();
+        final List<Integer> adjEdges = game.getBoard().getAdjacentEdgesToNode(settlement.getCoordinates());
 
-        while (edge1Enum.hasMoreElements())
+        for (Integer edge1 : adjEdges)
         {
-            prTrash.removeAllElements();
+            prTrash.clear();
 
-            Integer edge1 = edge1Enum.nextElement();
             SOCPossibleRoad pr = possibleRoads.get(edge1);
 
             if (pr != null)
@@ -1803,16 +1780,15 @@ public class SOCPlayerTracker
                     {
                         final int settleCoord = settlement.getCoordinates(),
                                   settlePN    = settlement.getPlayerNumber();
-                        Enumeration<SOCPossiblePiece> threatEnum = pr.getThreats().elements();
 
-                        while (threatEnum.hasMoreElements())
+                        for (SOCPossiblePiece threat : pr.getThreats())
                         {
-                            SOCPossiblePiece threat = threatEnum.nextElement();
-
-                            if ((threat.getType() == SOCPossiblePiece.SETTLEMENT) && (threat.getCoordinates() == settleCoord) && (threat.getPlayer().getPlayerNumber() == settlePN))
+                            if ((threat.getType() == SOCPossiblePiece.SETTLEMENT)
+                                && (threat.getCoordinates() == settleCoord)
+                                && (threat.getPlayer().getPlayerNumber() == settlePN))
                             {
                                 D.ebugPrintln("$$$ new settlement cuts off road at " + Integer.toHexString(pr.getCoordinates()));
-                                prTrash.addElement(pr);
+                                prTrash.add(pr);
 
                                 break;
                             }
@@ -1821,24 +1797,19 @@ public class SOCPlayerTracker
                 }
                 else
                 {
-                    nrTrash.removeAllElements();
+                    nrTrash.clear();
 
-                    Enumeration<SOCPossibleRoad> nrEnum = pr.getNecessaryRoads().elements();
-
-                    while (nrEnum.hasMoreElements())
+                    for (SOCPossibleRoad nr : pr.getNecessaryRoads())
                     {
-                        SOCPossibleRoad nr = nrEnum.nextElement();
                         final int nrEdge = nr.getCoordinates();
-                        Enumeration<Integer> edge2Enum = adjEdges.elements();
 
-                        while (edge2Enum.hasMoreElements())
+                        for (Integer edge2 : adjEdges)
                         {
-                            Integer edge2 = edge2Enum.nextElement();
-
                             if (nrEdge == edge2.intValue())
                             {
-                                D.ebugPrintln("$$$ removing dependency " + Integer.toHexString(nrEdge) + " from " + Integer.toHexString(pr.getCoordinates()));
-                                nrTrash.addElement(nr);
+                                D.ebugPrintln("$$$ removing dependency " + Integer.toHexString(nrEdge)
+                                    + " from " + Integer.toHexString(pr.getCoordinates()));
+                                nrTrash.add(nr);
 
                                 break;
                             }
@@ -1848,21 +1819,18 @@ public class SOCPlayerTracker
                     ///
                     /// take out nr trash
                     ///
-                    if (!nrTrash.isEmpty())
+                    if (! nrTrash.isEmpty())
                     {
-                        Enumeration<SOCPossibleRoad> nrTrashEnum = nrTrash.elements();
-
-                        while (nrTrashEnum.hasMoreElements())
+                        for (SOCPossibleRoad nrTrashRoad : nrTrash)
                         {
-                            SOCPossibleRoad nrTrashRoad = nrTrashEnum.nextElement();
-                            pr.getNecessaryRoads().removeElement(nrTrashRoad);
-                            nrTrashRoad.getNewPossibilities().removeElement(pr);
+                            pr.getNecessaryRoads().remove(nrTrashRoad);
+                            nrTrashRoad.getNewPossibilities().remove(pr);
                         }
 
                         if (pr.getNecessaryRoads().isEmpty())
                         {
                             D.ebugPrintln("$$$ no more dependencies, removing " + Integer.toHexString(pr.getCoordinates()));
-                            prTrash.addElement(pr);
+                            prTrash.add(pr);
                         }
                     }
                 }
@@ -1871,12 +1839,9 @@ public class SOCPlayerTracker
             ///
             /// take out the pr trash
             ///
-            Enumeration<SOCPossibleRoad> prTrashEnum = prTrash.elements();
-
-            while (prTrashEnum.hasMoreElements())
+            for (SOCPossibleRoad prt : prTrash)
             {
-                SOCPossibleRoad prt = prTrashEnum.nextElement();
-                possibleRoads.remove(new Integer(prt.getCoordinates()));
+                possibleRoads.remove(Integer.valueOf(prt.getCoordinates()));
                 removeFromNecessaryRoads(prt);
                 removeDependents(prt);
             }
@@ -1897,14 +1862,11 @@ public class SOCPlayerTracker
          */
 
         //D.ebugPrintln("$$$ removeDependents "+Integer.toHexString(road.getCoordinates()));
-        Enumeration<SOCPossiblePiece> newPosEnum = road.getNewPossibilities().elements();
 
-        while (newPosEnum.hasMoreElements())
+        for (SOCPossiblePiece newPos : road.getNewPossibilities())
         {
-            SOCPossiblePiece newPos = newPosEnum.nextElement();
-
             //D.ebugPrintln("$$$ updating "+Integer.toHexString(newPos.getCoordinates()));
-            Vector<SOCPossibleRoad> nr;
+            final List<SOCPossibleRoad> nr;
 
             switch (newPos.getType())
             {
@@ -1918,12 +1880,12 @@ public class SOCPlayerTracker
                 }
                 else
                 {
-                    nr.removeElement(road);
+                    nr.remove(road);
 
                     if (nr.isEmpty())
                     {
                         //D.ebugPrintln("$$$ removing this road");
-                        possibleRoads.remove(new Integer(newPos.getCoordinates()));
+                        possibleRoads.remove(Integer.valueOf(newPos.getCoordinates()));
                         removeFromNecessaryRoads((SOCPossibleRoad) newPos);
                         removeDependents((SOCPossibleRoad) newPos);
                     }
@@ -1933,17 +1895,9 @@ public class SOCPlayerTracker
                         // update this road's numberOfNecessaryRoads value
                         //
                         int smallest = 40;
-                        Enumeration<SOCPossibleRoad> nrEnum = nr.elements();
-
-                        while (nrEnum.hasMoreElements())
-                        {
-                            SOCPossibleRoad necRoad = nrEnum.nextElement();
-
+                        for (SOCPossibleRoad necRoad : nr)
                             if ((necRoad.getNumberOfNecessaryRoads() + 1) < smallest)
-                            {
                                 smallest = necRoad.getNumberOfNecessaryRoads() + 1;
-                            }
-                        }
 
                         ((SOCPossibleRoad) newPos).setNumberOfNecessaryRoads(smallest);
                     }
@@ -1960,24 +1914,19 @@ public class SOCPlayerTracker
                 }
                 else
                 {
-                    nr.removeElement(road);
+                    nr.remove(road);
 
                     if (nr.isEmpty())
                     {
                         //D.ebugPrintln("$$$ removing this settlement");
-                        possibleSettlements.remove(new Integer(newPos.getCoordinates()));
+                        possibleSettlements.remove(Integer.valueOf(newPos.getCoordinates()));
                         removeFromNecessaryRoads((SOCPossibleSettlement) newPos);
 
                         /**
                          * remove the conflicts that this settlement made
                          */
-                        Enumeration<SOCPossibleSettlement> conflictEnum = ((SOCPossibleSettlement) newPos).getConflicts().elements();
-
-                        while (conflictEnum.hasMoreElements())
-                        {
-                            SOCPossibleSettlement conflict = conflictEnum.nextElement();
+                        for (SOCPossibleSettlement conflict : ((SOCPossibleSettlement) newPos).getConflicts())
                             conflict.removeConflict((SOCPossibleSettlement) newPos);
-                        }
                     }
                     else
                     {
@@ -1985,17 +1934,9 @@ public class SOCPlayerTracker
                         // update this road's numberOfNecessaryRoads value
                         //
                         int smallest = 40;
-                        Enumeration<SOCPossibleRoad> nrEnum = nr.elements();
-
-                        while (nrEnum.hasMoreElements())
-                        {
-                            SOCPossibleRoad necRoad = nrEnum.nextElement();
-
+                        for (SOCPossibleRoad necRoad : nr)
                             if ((necRoad.getNumberOfNecessaryRoads() + 1) < smallest)
-                            {
                                 smallest = necRoad.getNumberOfNecessaryRoads() + 1;
-                            }
-                        }
 
                         ((SOCPossibleSettlement) newPos).setNumberOfNecessaryRoads(smallest);
                     }
@@ -2005,7 +1946,7 @@ public class SOCPlayerTracker
             }
         }
 
-        road.getNewPossibilities().removeAllElements();
+        road.getNewPossibilities().clear();
     }
 
     /**
@@ -2016,15 +1957,10 @@ public class SOCPlayerTracker
     protected void removeFromNecessaryRoads(SOCPossibleRoad pr)
     {
         //D.ebugPrintln("%%% remove road from necessary roads");
-        Enumeration<SOCPossibleRoad> nrEnum = pr.getNecessaryRoads().elements();
 
-        while (nrEnum.hasMoreElements())
-        {
-            SOCPossibleRoad nr = nrEnum.nextElement();
-
+        for (SOCPossibleRoad nr : pr.getNecessaryRoads())
             //D.ebugPrintln("%%% removing road at "+Integer.toHexString(pr.getCoordinates())+" from road at "+Integer.toHexString(nr.getCoordinates()));
-            nr.getNewPossibilities().removeElement(pr);
-        }
+            nr.getNewPossibilities().remove(pr);
     }
 
     /**
@@ -2038,15 +1974,10 @@ public class SOCPlayerTracker
             return;    // just in case; should not happen
 
         //D.ebugPrintln("%%% remove settlement from necessary roads");
-        Enumeration<SOCPossibleRoad> nrEnum = ps.getNecessaryRoads().elements();
 
-        while (nrEnum.hasMoreElements())
-        {
-            SOCPossibleRoad nr = nrEnum.nextElement();
-
+        for (SOCPossibleRoad nr : ps.getNecessaryRoads())
             //D.ebugPrintln("%%% removing settlement at "+Integer.toHexString(ps.getCoordinates())+" from road at "+Integer.toHexString(nr.getCoordinates()));
-            nr.getNewPossibilities().removeElement(ps);
-        }
+            nr.getNewPossibilities().remove(ps);
     }
 
     /**
@@ -2118,7 +2049,7 @@ public class SOCPlayerTracker
         {
             SOCPossibleRoad posRoad = posRoadsIter.next();
 
-            if ((!posRoad.isThreatUpdated()) && (posRoad.getNecessaryRoads().isEmpty()))
+            if ((! posRoad.isThreatUpdated()) && posRoad.getNecessaryRoads().isEmpty())
             {
                 //D.ebugPrintln("&&&& examining road at "+Integer.toHexString(posRoad.getCoordinates()));
 
@@ -2219,45 +2150,37 @@ public class SOCPlayerTracker
                  * possible road, then all of the possible pieces that
                  * threaten this road, also threaten those pieces
                  */
-                Vector<SOCPossiblePiece> threats = posRoad.getThreats();
-                Stack<SOCPossiblePiece> stack = new Stack<SOCPossiblePiece>();
+                final List<SOCPossiblePiece> threats = posRoad.getThreats();
+                final Stack<SOCPossiblePiece> stack = new Stack<SOCPossiblePiece>();
                 stack.push(posRoad);
 
-                while (!stack.empty())
+                while (! stack.empty())
                 {
                     SOCPossiblePiece curPosPiece = stack.pop();
 
-                    // TODO roads only; need to also decide how ships are threatened
+                    // TODO: is roads only; need to also decide how ships are threatened
 
                     if ((curPosPiece.getType() == SOCPossiblePiece.ROAD)
                         || ((curPosPiece instanceof SOCPossibleShip)
                              && ((SOCPossibleShip) curPosPiece).isCoastalRoadAndShip))
                     {
-                        Enumeration<SOCPossiblePiece> newPosEnum = ((SOCPossibleRoad) curPosPiece).getNewPossibilities().elements();
-
-                        while (newPosEnum.hasMoreElements())
+                        for (SOCPossiblePiece newPosPiece : ((SOCPossibleRoad) curPosPiece).getNewPossibilities())
                         {
-                            SOCPossiblePiece newPosPiece = newPosEnum.nextElement();
-
                             if ((newPosPiece.getType() == SOCPossiblePiece.ROAD)
                                 || ((newPosPiece instanceof SOCPossibleShip)
                                     && ((SOCPossibleShip) newPosPiece).isCoastalRoadAndShip))
                             {
-                                Vector<SOCPossibleRoad> necRoadVec = ((SOCPossibleRoad) newPosPiece).getNecessaryRoads();
+                                final List<SOCPossibleRoad> necRoadList = ((SOCPossibleRoad) newPosPiece).getNecessaryRoads();
 
-                                if ((necRoadVec.size() == 1) && (necRoadVec.firstElement() == curPosPiece))
+                                if ((necRoadList.size() == 1) && (necRoadList.get(0) == curPosPiece))
                                 {
                                     /**
                                      * pass on all of the threats to this piece
                                      */
 
                                     //D.ebugPrintln("&&&& adding threats to road at "+Integer.toHexString(newPosPiece.getCoordinates()));
-                                    Enumeration<SOCPossiblePiece> threatEnum = threats.elements();
-
-                                    while (threatEnum.hasMoreElements())
-                                    {
-                                        ((SOCPossibleRoad) newPosPiece).addThreat(threatEnum.nextElement());
-                                    }
+                                    for (SOCPossiblePiece threat : threats)
+                                        ((SOCPossibleRoad) newPosPiece).addThreat(threat);
                                 }
 
                                 /**
@@ -2321,11 +2244,11 @@ public class SOCPlayerTracker
                  * if this road has only one supporting road,
                  * find the node between this and the supporting road
                  */
-                Vector<SOCPossibleRoad> necRoadVec = posRoad.getNecessaryRoads();
+                final List<SOCPossibleRoad> necRoadList = posRoad.getNecessaryRoads();
 
-                if (necRoadVec.size() == 1)
+                if (necRoadList.size() == 1)
                 {
-                    SOCPossibleRoad necRoad = necRoadVec.firstElement();
+                    final SOCPossibleRoad necRoad = necRoadList.get(0);
                     final int[] adjNodes1 = board.getAdjacentNodesToEdge_arr(posRoad.getCoordinates());
 
                     for (int i1 = 0; i1 < 2; ++i1)
@@ -2412,24 +2335,21 @@ public class SOCPlayerTracker
                 //
                 // if this settlement doesn't rely on anything, then we're done
                 //
-                Vector<SOCPossibleRoad> necRoadVec = posSet.getNecessaryRoads();
+                final List<SOCPossibleRoad> necRoadList = posSet.getNecessaryRoads();
 
-                if (necRoadVec.isEmpty())
+                if (necRoadList.isEmpty())
                 {
                     ;
                 }
-                else if (necRoadVec.size() == 1)
+                else if (necRoadList.size() == 1)
                 {
                     //
                     // if it relies on only one road, then it inherits the road's threats
                     //
                     //D.ebugPrintln("&&&& inheriting threats from road at "+Integer.toHexString(((SOCPossibleRoad)necRoadVec.firstElement()).getCoordinates()));
-                    Enumeration<SOCPossiblePiece> threatEnum = necRoadVec.firstElement().getThreats().elements();
 
-                    while (threatEnum.hasMoreElements())
-                    {
-                        posSet.addThreat(threatEnum.nextElement());
-                    }
+                    for (SOCPossiblePiece nrThreat: necRoadList.get(0).getThreats())
+                        posSet.addThreat(nrThreat);
                 }
                 else
                 {
@@ -2438,20 +2358,15 @@ public class SOCPlayerTracker
                     // if all of the roads have the same threat,
                     // then add that threat to this settlement
                     //
-                    SOCPossibleRoad nr = necRoadVec.firstElement();
-                    Enumeration<SOCPossiblePiece> nrThreatEnum = nr.getThreats().elements();
+                    final SOCPossibleRoad nr = necRoadList.get(0);
 
-                    while (nrThreatEnum.hasMoreElements())
+                    for (SOCPossiblePiece nrThreat : nr.getThreats())
                     {
-                        SOCPossiblePiece nrThreat = nrThreatEnum.nextElement();
                         boolean allHaveIt = true;
-                        Enumeration<SOCPossibleRoad> nr2Enum = necRoadVec.elements();
 
-                        while (nr2Enum.hasMoreElements())
+                        for (SOCPossibleRoad nr2 : necRoadList)
                         {
-                            SOCPossibleRoad nr2 = nr2Enum.nextElement();
-
-                            if ((nr2 != nr) && (!nr2.getThreats().contains(nrThreat)))
+                            if ((nr2 != nr) && ! nr2.getThreats().contains(nrThreat))
                             {
                                 allHaveIt = false;
 
@@ -2928,7 +2843,7 @@ public class SOCPlayerTracker
             int points = player.getTotalVP();
             int fastestETA;
 
-            Queue<Pair<Integer, Vector<SOCPossibleRoad>>> necRoadQueue = new Queue<Pair<Integer, Vector<SOCPossibleRoad>>>();
+            Queue<Pair<Integer, List<SOCPossibleRoad>>> necRoadQueue = new Queue<Pair<Integer, List<SOCPossibleRoad>>>();
 
             final int vp_winner = game.vp_winner;
             while (points < vp_winner)
@@ -2990,17 +2905,17 @@ public class SOCPlayerTracker
                         {
                             int totalNecRoads = 0;
 
-                            if (!chosenSet.getNecessaryRoads().isEmpty())
+                            if (! chosenSet.getNecessaryRoads().isEmpty())
                             {
                                 necRoadQueue.clear();
-                                necRoadQueue.put(new Pair<Integer, Vector<SOCPossibleRoad>>
+                                necRoadQueue.put(new Pair<Integer, List<SOCPossibleRoad>>
                                     (Integer.valueOf(0), chosenSet.getNecessaryRoads()));
 
-                                while (!necRoadQueue.empty())
+                                while (! necRoadQueue.empty())
                                 {
-                                    Pair<Integer, Vector<SOCPossibleRoad>> necRoadPair = necRoadQueue.get();
+                                    Pair<Integer, List<SOCPossibleRoad>> necRoadPair = necRoadQueue.get();
                                     Integer number = necRoadPair.getA();
-                                    Vector<SOCPossibleRoad> necRoads = necRoadPair.getB();
+                                    List<SOCPossibleRoad> necRoads = necRoadPair.getB();
                                     totalNecRoads = number.intValue();
 
                                     if (necRoads.isEmpty())
@@ -3009,14 +2924,9 @@ public class SOCPlayerTracker
                                     }
                                     else
                                     {
-                                        Enumeration<SOCPossibleRoad> necRoadEnum = necRoads.elements();
-
-                                        while (necRoadEnum.hasMoreElements())
-                                        {
-                                            SOCPossibleRoad nr = necRoadEnum.nextElement();
-                                            necRoadQueue.put(new Pair<Integer, Vector<SOCPossibleRoad>>
+                                        for (SOCPossibleRoad nr : necRoads)
+                                            necRoadQueue.put(new Pair<Integer, List<SOCPossibleRoad>>
                                                 (Integer.valueOf(totalNecRoads + 1), nr.getNecessaryRoads()));
-                                        }
 
                                         if (necRoadQueue.size() > 100)
                                         {
@@ -3180,7 +3090,7 @@ public class SOCPlayerTracker
                     {
                         canBuild2Settlements = true;
 
-                        Vector<SOCPossibleSettlement> posSetsToPutBack = new Vector<SOCPossibleSettlement>();
+                        ArrayList<SOCPossibleSettlement> posSetsToPutBack = new ArrayList<SOCPossibleSettlement>();
 
                         for (int i = 0; i < 2; i++)
                         {
@@ -3319,17 +3229,17 @@ public class SOCPlayerTracker
                                 ///
                                 int totalNecRoads = 0;
 
-                                if (!chosenSet[i].getNecessaryRoads().isEmpty())
+                                if (! chosenSet[i].getNecessaryRoads().isEmpty())
                                 {
                                     necRoadQueue.clear();
-                                    necRoadQueue.put(new Pair<Integer, Vector<SOCPossibleRoad>>
+                                    necRoadQueue.put(new Pair<Integer, List<SOCPossibleRoad>>
                                         (Integer.valueOf(0), chosenSet[i].getNecessaryRoads()));
 
-                                    while (!necRoadQueue.empty())
+                                    while (! necRoadQueue.empty())
                                     {
-                                        Pair<Integer, Vector<SOCPossibleRoad>> necRoadPair = necRoadQueue.get();
+                                        Pair<Integer, List<SOCPossibleRoad>> necRoadPair = necRoadQueue.get();
                                         Integer number = necRoadPair.getA();
-                                        Vector<SOCPossibleRoad> necRoads = necRoadPair.getB();
+                                        List<SOCPossibleRoad> necRoads = necRoadPair.getB();
                                         totalNecRoads = number.intValue();
 
                                         if (necRoads.isEmpty())
@@ -3338,14 +3248,9 @@ public class SOCPlayerTracker
                                         }
                                         else
                                         {
-                                            Enumeration<SOCPossibleRoad> necRoadEnum = necRoads.elements();
-
-                                            while (necRoadEnum.hasMoreElements())
-                                            {
-                                                SOCPossibleRoad nr = necRoadEnum.nextElement();
-                                                necRoadQueue.put(new Pair<Integer, Vector<SOCPossibleRoad>>
+                                            for (SOCPossibleRoad nr : necRoads)
+                                                necRoadQueue.put(new Pair<Integer, List<SOCPossibleRoad>>
                                                     (Integer.valueOf(totalNecRoads + 1), nr.getNecessaryRoads()));
-                                            }
 
                                             if (necRoadQueue.size() > 100)
                                             {
@@ -3365,14 +3270,11 @@ public class SOCPlayerTracker
 
                                 if ((i == 0) && (chosenSet[0] != null))
                                 {
-                                    posSetsCopy.remove(new Integer(chosenSet[0].getCoordinates()));
+                                    posSetsCopy.remove(Integer.valueOf(chosenSet[0].getCoordinates()));
 
-                                    Enumeration<SOCPossibleSettlement> conflicts = chosenSet[0].getConflicts().elements();
-
-                                    while (conflicts.hasMoreElements())
+                                    for (SOCPossibleSettlement conflict : chosenSet[0].getConflicts())
                                     {
-                                        SOCPossibleSettlement conflict = conflicts.nextElement();
-                                        Integer conflictInt = new Integer(conflict.getCoordinates());
+                                        Integer conflictInt = Integer.valueOf(conflict.getCoordinates());
                                         SOCPossibleSettlement possibleConflict = posSetsCopy.get(conflictInt);
 
                                         if (possibleConflict != null)
@@ -3398,14 +3300,11 @@ public class SOCPlayerTracker
                             }
                         }
 
-                        posSetsCopy.put(new Integer(chosenSet[0].getCoordinates()), chosenSet[0]);
+                        posSetsCopy.put(Integer.valueOf(chosenSet[0].getCoordinates()), chosenSet[0]);
 
-                        Iterator<SOCPossibleSettlement> posSetsToPutBackIter = posSetsToPutBack.iterator();
-
-                        while (posSetsToPutBackIter.hasNext())
+                        for (SOCPossibleSettlement tmpPosSet : posSetsToPutBack)
                         {
-                            SOCPossibleSettlement tmpPosSet = posSetsToPutBackIter.next();
-                            posSetsCopy.put(new Integer(tmpPosSet.getCoordinates()), tmpPosSet);
+                            posSetsCopy.put(Integer.valueOf(tmpPosSet.getCoordinates()), tmpPosSet);
                         }
 
                         if (canBuild2Settlements && (twoSettlements <= fastestETA))
@@ -3624,17 +3523,17 @@ public class SOCPlayerTracker
                         ///
                         int totalNecRoads = 0;
 
-                        if (!chosenSet[0].getNecessaryRoads().isEmpty())
+                        if (! chosenSet[0].getNecessaryRoads().isEmpty())
                         {
                             necRoadQueue.clear();
-                            necRoadQueue.put(new Pair<Integer, Vector<SOCPossibleRoad>>
+                            necRoadQueue.put(new Pair<Integer, List<SOCPossibleRoad>>
                                 (Integer.valueOf(0), chosenSet[0].getNecessaryRoads()));
 
-                            while (!necRoadQueue.empty())
+                            while (! necRoadQueue.empty())
                             {
-                                Pair<Integer, Vector<SOCPossibleRoad>> necRoadPair = necRoadQueue.get();
+                                Pair<Integer, List<SOCPossibleRoad>> necRoadPair = necRoadQueue.get();
                                 Integer number = necRoadPair.getA();
-                                Vector<SOCPossibleRoad> necRoads = necRoadPair.getB();
+                                List<SOCPossibleRoad> necRoads = necRoadPair.getB();
                                 totalNecRoads = number.intValue();
 
                                 if (necRoads.isEmpty())
@@ -3643,14 +3542,9 @@ public class SOCPlayerTracker
                                 }
                                 else
                                 {
-                                    Enumeration<SOCPossibleRoad> necRoadEnum = necRoads.elements();
-
-                                    while (necRoadEnum.hasMoreElements())
-                                    {
-                                        SOCPossibleRoad nr = necRoadEnum.nextElement();
-                                        necRoadQueue.put(new Pair<Integer, Vector<SOCPossibleRoad>>
+                                    for (SOCPossibleRoad nr : necRoads)
+                                        necRoadQueue.put(new Pair<Integer, List<SOCPossibleRoad>>
                                             (Integer.valueOf(totalNecRoads + 1), nr.getNecessaryRoads()));
-                                    }
 
                                     if (necRoadQueue.size() > 100)
                                     {
@@ -3790,8 +3684,8 @@ public class SOCPlayerTracker
                     if ((settlementPiecesLeft > 1) && (posSetsCopy.size() > 1)
                         && canBuild2Settlements && (fastestETA == twoSettlements))
                     {
-                        Integer chosenSet0Int = new Integer(chosenSet[0].getCoordinates());
-                        Integer chosenSet1Int = new Integer(chosenSet[1].getCoordinates());
+                        Integer chosenSet0Int = Integer.valueOf(chosenSet[0].getCoordinates());
+                        Integer chosenSet1Int = Integer.valueOf(chosenSet[1].getCoordinates());
                         posSetsCopy.remove(chosenSet0Int);
                         posSetsCopy.remove(chosenSet1Int);
                         posCitiesCopy.put(chosenSet0Int, new SOCPossibleCity(player, chosenSet[0].getCoordinates()));
@@ -3800,21 +3694,15 @@ public class SOCPlayerTracker
                         //
                         // remove possible settlements that are conflicts
                         //
-                        Enumeration<SOCPossibleSettlement> conflicts = chosenSet[0].getConflicts().elements();
-
-                        while (conflicts.hasMoreElements())
+                        for (SOCPossibleSettlement conflict : chosenSet[0].getConflicts())
                         {
-                            SOCPossibleSettlement conflict = conflicts.nextElement();
-                            Integer conflictInt = new Integer(conflict.getCoordinates());
+                            Integer conflictInt = Integer.valueOf(conflict.getCoordinates());
                             posSetsCopy.remove(conflictInt);
                         }
 
-                        conflicts = chosenSet[1].getConflicts().elements();
-
-                        while (conflicts.hasMoreElements())
+                        for (SOCPossibleSettlement conflict : chosenSet[1].getConflicts())
                         {
-                            SOCPossibleSettlement conflict = conflicts.nextElement();
-                            Integer conflictInt = new Integer(conflict.getCoordinates());
+                            Integer conflictInt = Integer.valueOf(conflict.getCoordinates());
                             posSetsCopy.remove(conflictInt);
                         }
 
@@ -3857,7 +3745,7 @@ public class SOCPlayerTracker
                                && ! posSetsCopy.isEmpty()  )
                              && (fastestETA == oneOfEach))
                     {
-                        Integer chosenSet0Int = new Integer(chosenSet[0].getCoordinates());
+                        Integer chosenSet0Int = Integer.valueOf(chosenSet[0].getCoordinates());
                         posSetsCopy.remove(chosenSet0Int);
 
                         if (chosenSet[0].getCoordinates() != chosenCity[0].getCoordinates())
@@ -3865,18 +3753,15 @@ public class SOCPlayerTracker
                             posCitiesCopy.put(chosenSet0Int, new SOCPossibleCity(player, chosenSet[0].getCoordinates()));
                         }
 
-                        posCitiesCopy.remove(new Integer(chosenCity[0].getCoordinates()));
+                        posCitiesCopy.remove(Integer.valueOf(chosenCity[0].getCoordinates()));
                         cityPiecesLeft -= 1;
 
                         //
                         // remove possible settlements that are conflicts
                         //
-                        Enumeration<SOCPossibleSettlement> conflicts = chosenSet[0].getConflicts().elements();
-
-                        while (conflicts.hasMoreElements())
+                        for (SOCPossibleSettlement conflict : chosenSet[0].getConflicts())
                         {
-                            SOCPossibleSettlement conflict = conflicts.nextElement();
-                            Integer conflictInt = new Integer(conflict.getCoordinates());
+                            Integer conflictInt = Integer.valueOf(conflict.getCoordinates());
                             posSetsCopy.remove(conflictInt);
                         }
 
@@ -3918,7 +3803,7 @@ public class SOCPlayerTracker
                     }
                     else if ((cityPiecesLeft > 1) && (citySpotsLeft > 1) && (fastestETA == twoCities))
                     {
-                        posCitiesCopy.remove(new Integer(chosenCity[0].getCoordinates()));
+                        posCitiesCopy.remove(Integer.valueOf(chosenCity[0].getCoordinates()));
 
                         //
                         // update our building speed estimate
@@ -4201,33 +4086,21 @@ public class SOCPlayerTracker
                     D.ebugPrint("   eta:" + pr.getETA());
                     D.ebugPrint("   this road/ship needs:");
 
-                    Enumeration<SOCPossibleRoad> nrEnum = pr.getNecessaryRoads().elements();
-
-                    while (nrEnum.hasMoreElements())
-                    {
-                        D.ebugPrint(" " + Integer.toHexString(nrEnum.nextElement().getCoordinates()));
-                    }
+                    for (SOCPossibleRoad nr : pr.getNecessaryRoads())
+                        D.ebugPrint(" " + Integer.toHexString(nr.getCoordinates()));
 
                     D.ebugPrintln();
                     D.ebugPrint("   this road/ship supports:");
 
-                    Enumeration<SOCPossiblePiece> newPosEnum = pr.getNewPossibilities().elements();
-
-                    while (newPosEnum.hasMoreElements())
-                    {
-                        D.ebugPrint(" " + Integer.toHexString(newPosEnum.nextElement().getCoordinates()));
-                    }
+                    for (SOCPossiblePiece pp : pr.getNewPossibilities())
+                        D.ebugPrint(" " + Integer.toHexString(pp.getCoordinates()));
 
                     D.ebugPrintln();
                     D.ebugPrint("   threats:");
 
-                    Enumeration<SOCPossiblePiece> threatEnum = pr.getThreats().elements();
-
-                    while (threatEnum.hasMoreElements())
-                    {
-                        SOCPossiblePiece threat = threatEnum.nextElement();
-                        D.ebugPrint(" " + threat.getPlayer().getPlayerNumber() + ":" + threat.getType() + ":" + Integer.toHexString(threat.getCoordinates()));
-                    }
+                    for (SOCPossiblePiece threat : pr.getThreats())
+                        D.ebugPrint(" " + threat.getPlayer().getPlayerNumber() + ":" + threat.getType() + ":"
+                            + Integer.toHexString(threat.getCoordinates()));
 
                     D.ebugPrintln();
                     D.ebugPrintln("   LR value=" + pr.getLRValue() + " LR Potential=" + pr.getLRPotential());
@@ -4241,42 +4114,25 @@ public class SOCPlayerTracker
                     D.ebugPrintln("%%% possible settlement at " + Integer.toHexString(ps.getCoordinates()));
                     D.ebugPrint("   eta:" + ps.getETA());
                     D.ebugPrint("%%%   conflicts");
-
-                    Enumeration<SOCPossibleSettlement> conflictEnum = ps.getConflicts().elements();
-
-                    while (conflictEnum.hasMoreElements())
-                    {
-                        SOCPossibleSettlement conflict = conflictEnum.nextElement();
-                        D.ebugPrint(" " + conflict.getPlayer().getPlayerNumber() + ":" + Integer.toHexString(conflict.getCoordinates()));
-                    }
+                    for (SOCPossibleSettlement conflict : ps.getConflicts())
+                        D.ebugPrint(" " + conflict.getPlayer().getPlayerNumber() + ":"
+                            + Integer.toHexString(conflict.getCoordinates()));
 
                     D.ebugPrintln();
                     D.ebugPrint("%%%   necessary roads/ships");
-
-                    Enumeration<SOCPossibleRoad> nrEnum = ps.getNecessaryRoads().elements();
-
-                    while (nrEnum.hasMoreElements())
-                    {
-                        SOCPossibleRoad nr = nrEnum.nextElement();
+                    for (SOCPossibleRoad nr : ps.getNecessaryRoads())
                         D.ebugPrint(" " + Integer.toHexString(nr.getCoordinates()));
-                    }
 
                     D.ebugPrintln();
                     D.ebugPrint("   threats:");
-
-                    Enumeration<SOCPossiblePiece> threatEnum = ps.getThreats().elements();
-
-                    while (threatEnum.hasMoreElements())
-                    {
-                        SOCPossiblePiece threat = threatEnum.nextElement();
-                        D.ebugPrint(" " + threat.getPlayer().getPlayerNumber() + ":" + threat.getType() + ":" + Integer.toHexString(threat.getCoordinates()));
-                    }
+                    for (SOCPossiblePiece threat : ps.getThreats())
+                        D.ebugPrint(" " + threat.getPlayer().getPlayerNumber() + ":" + threat.getType() + ":"
+                            + Integer.toHexString(threat.getCoordinates()));
 
                     D.ebugPrintln();
                 }
 
                 Iterator<SOCPossibleCity> pcIter = tracker.getPossibleCities().values().iterator();
-
                 while (pcIter.hasNext())
                 {
                     SOCPossibleCity pc = pcIter.next();
